src/static/styles/ui.scss
/* ... */
.ui-progressHeader__title:focus {
    outline: none;
}

@media (max-width: 400px) {
    .ui-progressHeader {
        padding: 0;
    }
    .ui-progressHeader__progressContainer {
        padding-top: 2.5rem;
    }
}

.ui-progressHeader__button {
    position: absolute;
    top: 0;
}
.ui-progressHeader__button--left {
    left: var(--spacings-medium);
}
.ui-progressHeader__button--right {
    right: var(--spacings-medium);
}

.ui-progressHeader__dots {
    padding: var(--spacings-medium);
    display: flex;
    justify-content: center;
}

.ui-progressHeader__dot {
    border-radius: 50%;
    display: block;
    background: var(--colors-background_0-backgroundColor);
    height: var(--icon-size-normal);
    width: var(--icon-size-normal);
}
.ui-progressHeader__dot:not(:last-child) {
    margin-right: var(--spacings-medium);
}
.ui-progressHeader__dot--active {
    background: var(--colors-primary_2-backgroundColor);
}

.ui-accessibleFieldset {
    border: 0;
    padding: 0;
    margin: 0;
}
.ui-accessibleFieldset__legend {
    position: absolute;
    clip: rect(0 0 0 0);
}

.ui-hamburgerButton {
    --distance: 0.5rem;

    width: 3.25rem;
    height: 2.75rem;
    position: relative;
    transform: rotate(0deg);
    transition: 0.5s ease-in-out;

    background: transparent;
    border: 0;
    cursor: pointer;
    color: var(--colors-background_accent-color);

    font-size: var(--baseTypo-body__primary-fontSize, 1rem);
    line-height: var(--baseTypo-body__primary-lineHeight, 1.25rem);
    letter-spacing: var(--baseTypo-body__primary-letterSpacing, 0.03125rem);
}
.ui-hamburgerButton:hover {
    opacity: 0.6;
}
.ui-hamburgerButton:active {
    opacity: 0.4;
}

.ui-hamburgerButton span {
    display: block;
    position: absolute;
    height: 0.25rem;
    background: var(--colors-background_accent-color);
    border-radius: 0.25rem;
    opacity: 1;
    left: var(--spacings-medium);
    width: calc(100% - var(--spacings-medium) * 2);
    transform: rotate(0deg);
    transition: 0.25s ease-in-out;
}

.ui-hamburgerButton span:nth-child(1) {
    top: calc(0.25rem + var(--distance));
    transform-origin: left center;
}

.ui-hamburgerButton span:nth-child(2) {
    top: calc(0.25rem + 2 * var(--distance));
    transform-origin: left center;
}

.ui-hamburgerButton span:nth-child(3) {
    top: calc(0.25rem + 3 * var(--distance));
    transform-origin: left center;
}

.ui-hamburgerButton--open span:nth-child(1) {
    transform: rotate(45deg);
    top: calc(0.25rem + var(--distance) - 1px);
    left: calc(var(--spacings-medium) + 1px);
}

.ui-hamburgerButton--open span:nth-child(2) {
    width: 0%;
    opacity: 0;
}

.ui-hamburgerButton--open span:nth-child(3) {
    transform: rotate(-45deg);
    top: calc(0.25rem + 3 * var(--distance) + 3px);
    left: calc(var(--spacings-medium) + 1px);
}

// Dark Icon management

.ui-img-dark > img {
    display: block;
}

